kustomize/base/echo-api-httproute-echo-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-api
  namespace: echo-api
  labels:
    app.kubernetes.io/instance: echo-api
    app.kubernetes.io/name: echo-api
spec:
  hostnames:
    - echo.globex.placeholder
  parentRefs:
    - name: prod-web
      namespace: ingress-gateway
  rules:
    - backendRefs:
        - name: echo-api
          port: 8080
